--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ logging.level.org.springframework.web=TRACE
 logging.level.web=TRACE
 
 logging.level.org.apache.http=DEBUG
-logging.level.org.springframework.web.client.RestTemplace=DEBUG
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
@@ -21,3 +21,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 
 # JWT Security
 spring.security.jwt=true
+spring.security.jwt.session-duration=600000
