--- a/src/test/resources/test.application.properties
+++ b/src/test/resources/test.application.properties
@@ -1,6 +1,6 @@
 spring.application.name = springBootRest
 server.servlet.context-path=/springBootRest
-server.port=8092
+server.port=8094
 
 # Logging
 logging.level.org.springframework=info
@@ -8,7 +8,7 @@ logging.level.org.springframework.web=TRACE
 logging.level.web=TRACE
 
 logging.level.org.apache.http=DEBUG
-logging.level.org.springframework.web.client.RestTemplace=DEBUG
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
@@ -21,5 +21,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 
 # JWT Security
 spring.security.jwt=true
-spring.security.usr='test'
-spring.security.passwd='123456'
+spring.security.jwt.session-duration=600000
+spring.security.usr=myAdmin
+spring.security.passwd=myAdminPassword
