--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,19 @@ server.servlet.context-path=/springBootRest
 server.port=8092
 
 # Logging
-logging.level.org.springframework=info
+logging.level.org.springframework=INFO
 logging.level.org.springframework.web=TRACE
 logging.level.web=TRACE
 
 logging.level.org.apache.http=DEBUG
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
+logging.file=log/SpringBootJWT.log
+
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@test-oracle-xe:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:xe
 spring.datasource.username=spring_db
 spring.datasource.password=spring_db
 spring.jpa.hibernate.ddl-auto=validate
