--- a/src/test/resources/test.application.properties
+++ b/src/test/resources/test.application.properties
@@ -14,6 +14,8 @@ logging.level.org.springframework.web.client.RestTemplate=DEBUG
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=test_spring_db
 spring.datasource.password=test_spring_db
+#spring.datasource.username=spring_db
+#spring.datasource.password=spring_db
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
