--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ logging.level.org.springframework.web.client.RestTemplate=DEBUG
 logging.file=log/SpringBootJWT.log
 
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@test-oracle-xe:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@oracle-internal:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@test-oracle-xe:1521:xe
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 #spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:xe
 spring.datasource.username=spring_db
